# cpp_piscine_1

./: CMakeLists.txt  Makefile_pro  README.md
Cpp00/ex00/: megaphone.cpp
Cpp00/ex01/: PhoneBook.cpp  main.cpp  phonebook
assets/: Phonebook.drawio  README.md
cpp00/: CONCEPTOS_CLAVE.md  CONCEPTOS_TECNICOS.md  README.md
cpp00/ex00/: Makefile  megaphone.cpp
cpp00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp  phonebook
cpp01/: CONCEPTOS_CLAVE.md  CONCEPTOS_TECNICOS.md  README.md  Zombie.hpp  randomChump.cpp
cpp01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  brainz  main.cpp  newZombie.cpp  randomChump.cpp
cpp01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  hordeofZombies  main.cpp
cpp01/ex02/: Makefile  main.cpp
cpp01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  attack  main.cpp
cpp01/ex04/: Makefile  main.cpp  test.txt  test.txt.replace
cpp01/ex05/: Harl.cpp  Harl.hpp  Makefile  harl  main.cpp
cpp01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp02/: CONCEPTOS_CLAVE.md  CONCEPTOS_TECNICOS.md  README.md
cpp02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp02/ex01/: Fixed.cpp  Fixed.hpp  (+1 more)
cpp03/: CONCEPTOS_CLAVE.md  CONCEPTOS_TECNICOS.md  README.md
cpp04/: CONCEPTOS_CLAVE.md  CONCEPTOS_TECNICOS.md  README.md
ex00/: Makefile  megaphone.cpp
ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
structs/: clases.cpp  clases.hpp  ej00.cpp  ej_main.cpp  uso_structs.cpp
teoria/: ej00.cpp  ej01.cpp  ej02.cpp  ej03.cpp
(+79 files in other folders)
